--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,16 +5,16 @@ jobs:
       - image: circleci/node:10 
     steps:
       - checkout
-      - run: npm install typescript
-      - sonarcloud/scan
-      - run:
-          command: |
-            STATUS=$(curl -u "${SONAR_TOKEN}:" https://sonarcloud.io/api/qualitygates/project_status?projectKey=kura2020_public2020 | jq -r '.projectStatus.status')
-            echo "Status of SonarQube task is ${STATUS} "
-            if [ "${STATUS}" != "OK" ]; then
-                echo "Quality gate is not OK - exiting with error"
-                exit 1
-            fi
+#      - run: npm install typescript
+#      - sonarcloud/scan
+#      - run:
+#          command: |
+#            STATUS=$(curl -u "${SONAR_TOKEN}:" https://sonarcloud.io/api/qualitygates/project_status?projectKey=kura2020_public2020_gulp | jq -r '.projectStatus.status')
+#            echo "Status of SonarQube task is ${STATUS} "
+#            if [ "${STATUS}" != "OK" ]; then
+#                echo "Quality gate is not OK - exiting with error"
+#                exit 1
+#            fi
       
       # Download and cache dependencies
       - run: 
